deployment.yaml
# Deployment do postgres
apiVersion: apps/v1
kind: Deployment
metadata: # Metadados do nosso objeto, nome desse obj, labels desse obj e etc...
  name: postgre #Não vamos colocar label porque ele é o deployment então não precisa, apenas nos containers e replicaset.
spec: # Todas spec do meu obj, as configurações do meu deployment.
  replicas: 1 # Quantidade de replicas do meu pod
  selector: # O selector é o nome que ele vai produrar nos pods para replicar e apontar as configurações necessárias.
    matchLabels: # Tem que ser igual a chave e valor abaixo.
      app: postgre
  template: # Caracteristica do meu pod, as informações dele, tudo acima é o gerencimento do pod.
    metadata: # Não vou colocar um nome para ele, por conta que ele vai se alto gerenciar.
      labels: # nesse exemplo ele vai ser captura através do selecto la em cima, sendo assim vai aplicar a replicas necessárias.
        app: postgre
    spec: # spec do pod, tenho containers em execução.
      containers:
        - name: postgre # nome do container.
          image: postgres:13.1 # imagem do container.
          env: # variaveis do meu container.
          - name: POSTGRES_PASSWORD
            value: Passw0rd2024!
          - name: POSTGRES_USER
            value: reviewfilmes
          - name: POSTGRES_DB
            value: reviewfilmes 
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector: 
    app: postgre # Todos os labels que tenha a chave e valor app: postgre
  ports:  
    - port: 5432
---

# Deployment da aplicação web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: reviewfilmes
  template: 
    metadata: 
      labels:
        app: reviewfilmes
    spec:
      containers:
        - name: reviewfilmes
          image: tuliosouzasl2021/review-filmes:v2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec:
  selector: 
    app: reviewfilmes
  ports:  
    - port: 80
      targetPort: 8080 # Redirecionamento de portas do meu servico para o container.
  type: ClusterIP
---
